[tool.poetry]
name = "nowpayments"
version = "1.3.0"
description = "A Python wrapper for the NOWPayments API"
authors = ["Arian Ventura Rodríguez <arianventura94@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Ventura94/FastAPICookie"
license = "Apache-2.0"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
